tests/snapshots/edit__one_level_nesting_flat_remove_single.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes: []
---
{
  description = "Edit your flake inputs with ease";

  inputs = {
    flake-utelinos.url = "github:numtide/flake-utils";
    rust-overlay.url = "github:oxalica/rust-overlay";
    rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
    rust-overlay.inputs.flake-utils.follows = "flake-utils";
    crane.url = "github:ipetkov/crane";
    crane.inputs.nixpkgs.follows = "nixpkgs";
    crane.inputs.rust-overlay.follows = "rust-overlay";
    crane.inputs.flake-utils.follows = "flake-utils";
  };

  outputs =
    {
      self,
      flake-utils,
      flake-utelinos,
      rust-overlay,
      crane,
    }:
    { };
}
